# deserve

./: README.md  deserve_frontend.py
controller/: .gitignore  config.toml.example  init.sql  main.py  requirements.txt
deserve_benchmark/: rater.py
deserve_client/: README.md  client.py  llama.py  model.py  pyproject.toml  requirements.txt  test.py
deserve_client/model/: attn.py  block.py  context.py  ffn.py  linear.py  norm.py
deserve_controller/: README.md  controller_api.py  pyproject.toml  requirements.txt
deserve_exp/: example.toml  readme.md  reproducibility.csv  start_expr.py
deserve_expr/: readme.md  start_expr.py
deserve_network/: Cargo.toml  pyproject.toml
deserve_network/pysrc/deserve_network/: __init__.py  sede.py
deserve_network/src/: lib.rs  sede.rs  server.rs
deserve_utils/: hash.py  serde.py  trace.py
deserve_worker/: README.md  command.py  forward_engine.py  kvcache.py  layer_storage.py  llm_engine.py  model.py  paged_kvcache.py  pyproject.toml  request.py  requirements.txt  resource.py  task.py  trace.py  worker.py  worker_api.py
deserve_worker/benchmark/: decode.py  mixed.py  prefill.py  swap.py  utils.py
deserve_worker/engine/: group.py  llm_engine.py  processor.py  scheduler.py
deserve_worker/engine/event/: base.py  exec.py
deserve_worker/engine/microbatch/: processor.py  scheduler.py
deserve_worker/engine/pipeline/: processor.py  scheduler.py
deserve_worker/engine/pipeline/stage/: __init__.py  join.py  swap.py
deserve_worker/execution/: exec.py  response.py  result.py
deserve_worker/kvcache/: block_pool.py  context.py  kvcache.py  manager.py  packed_kvcache.py  page_pool.py  paged_kvcache.py  swap.cpp  virtual.py
deserve_worker/kvcache/manager/: bulk.py  portable.py
deserve_worker/kvcache/paged/: chunk_pool.py  kvcache.py  page_pool.py  page_table.py
deserve_worker/kvcache/pinned/: kvcache.py  pinned_memory.py
deserve_worker/model/: args.py  llama.py  utils.py
deserve_worker/model/context/: flash.py  forward.py  paged.py  trace.py
deserve_worker/model/layer/: attention.py  linear.py  norm.py
(+6 files in other folders)
