[project]
name = "deserve_client"
version = "0.0.1"
authors = [
  { name="Example Author", email="author@example.com" },
]
description = "Deserve Client"
dependencies = [
  "requests",
  "safetensors",
  "torch==2.3.1",
  "transformers",
  "typer",
]
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
