[project]
name = "deserve_controller"
version = "0.0.1"
authors = [
  { name="Example Author", email="author@example.com" },
]
dependencies = [
  "cachetools",
  "fastapi",
  "pydantic",
  "requests",
  "safetensors",
  "transformers",
  "uvicorn",
]
description = "Deserve Controller"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
