[package]
name = "deserve_network"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "deserve_network_rust"
crate-type = ["cdylib"]

[dependencies]
actix = "0.13.5"
actix-web = "4.9.0"
anyhow = "1.0.93"
bincode = "1.3.3"
bytes = "1.8.0"
env_logger = "0.11.5"
pyo3 = "0.22.0"
reqwest = "0.12.9"
safetensors = "0.4.5"
tokio = { version = "1.41.1", features = ["full"] }
